# goerpc

./: .air.toml  .demo.env  .gitignore  BUILD.bazel  README.md  Taskfile.yaml  WORKSPACE.bazel  bazel-bin  bazel-goerpc  bazel-out  bazel-testlogs  buf.gen.yaml  buf.yaml  deps.bzl  go.work.sum  sqlc.yaml  versions.bzl
client/: BUILD.bazel  Dockerfile  go.mod  interceptor.go  main.go
envoy/: Dockerfile  deployment.yaml  envoy.yaml  service.yaml
k8s/: client.yaml  server.yaml
proto/: go.mod  go.sum
proto/dummy/v1/: BUILD.bazel  dummy.proto  exo.proto
proto/todo/v1/: BUILD.bazel  todo.proto
proto/todo/v2/: BUILD.bazel  todo.proto
server/: BUILD.bazel  Dockerfile  go.mod  go.sum  impl.go  impl_test.go  in_memory.go  interceptors.go  logger.go  main.go  server.go  server_test.go
server/helpers/: gzip.go
