load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["dummy.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jumaniyozov/goerpc/proto/v1",
    proto = ":exo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":v1_go_proto"],
    importpath = "github.com/jumaniyozov/goerpc/proto/v1",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "exo_proto",
    srcs = [
        "dummy.proto",
        "exo.proto",
    ],
    visibility = ["//visibility:public"],
)
